capacityplanner/force-app/main/default/objects/Leave_Request__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Stores the reason provided when a leave request is cancelled by the team member.</description>
</CustomField>