capacityplanner/force-app/main/default/objects/Leave_Request__c/fields/Hours_Requested__c.field-meta.xml
<CustomField>
    <fullName>Hours_Requested__c</fullName>
    <formula>IF(TEXT(Leave_Type__c) = "Full Day", Requestor__r.Daily_Capacity_Hours__c, Requestor__r.Daily_Capacity_Hours__c / 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>