capacityplanner/force-app/main/default/objects/Leave_Request__c/fields/Is_Single_Day__c.field-meta.xml
<CustomField>
    <fullName>Is_Single_Day__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Single Day</label>
    <type>Checkbox</type>
</CustomField>