capacityplanner/force-app/main/default/objects/Leave_Request__c/fields/Leave_Category__c.field-meta.xml
<CustomField>
    <fullName>Leave_Category__c</fullName>
    <label>Leave Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
                <default>true</default>
                <label>Annual</label>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>