capacityplanner/force-app/main/default/objects/Leave_Request__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Leave Requests (Manager)</relationshipLabel>
    <relationshipName>Managed_Leave_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>