capacityplanner/force-app/main/default/objects/Leave_Request__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Leave Requests</relationshipLabel>
    <relationshipName>Leave_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>